crates/qwik-optimizer-oxc/tests/snapshots/example_fix_dynamic_import.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
import thing from "../state";

export function foo() {
  return import("../foo/state2");
}

export const Header = component$(() => {
  return (
    <div>
      {import("../folder/state3")}
      {thing}
    </div>
  );
});

=== project/folder/test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Header_component_XXXXXXXXXXXX");
export function foo() {
  return import("../foo/state2");
}
export const Header = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);

=== project/folder/test.tsx_Header_component_XXXXXXXXXXXX.tsx ===
import thing from "../state";
export const Header_component_XXXXXXXXXXXX = () => {
  return (
    <div>
      {import("../folder/state3")}
      {thing}
    </div>
  );
};

/*
{
  "origin": "project/folder/test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": "entry_segments",
  "displayName": "test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "project/folder",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
