crates/qwik-optimizer-oxc/tests/snapshots/example_functional_component_capture_props.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStore } from "@qwik.dev/core";

export const App = component$(
  ({
    count,
    rest: [
      I2,
      {
        I3,
        v1: [I4],
        I5 = v2,
        ...I6
      },
      I7 = v3,
      ...I8
    ],
  }) => {
    const state = useStore({ count: 0 });
    const {
      rest: [
        C2,
        {
          C3,
          v1: [C4],
          C5 = v2,
          ...C6
        },
        C7 = v3,
        ...C8
      ],
    } = foo();
    return $(() => {
      return (
        <div onClick$={() => (state.count += count + total)}>
          {I2}
          {I3}
          {I4}
          {I5}
          {I6}
          {I7}
          {I8}
          {C2}
          {C3}
          {C4}
          {C5}
          {C6}
          {C7}
          {C8}
          {v1}
          {v2}
          {v3}
        </div>
      );
    });
  },
);

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_1_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = ({
  count,
  rest: [
    I2,
    {
      I3,
      v1: [I4],
      I5 = v2,
      ...I6
    },
    I7 = v3,
    ...I8
  ],
}) => {
  const state = useStore({
    count: 0,
  });
  const {
    rest: [
      C2,
      {
        C3,
        v1: [C4],
        C5 = v2,
        ...C6
      },
      C7 = v3,
      ...C8
    ],
  } = foo();
  return /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_1_XXXXXXXXXXXX", [
    C2,
    C3,
    C4,
    C5,
    C6,
    C7,
    C8,
    I2,
    I3,
    I4,
    I5,
    I6,
    I7,
    I8,
    count,
    state,
  ]);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "{count, rest: [I2, {I3, v1: [I4], I5}, ...I8]}"
  ]
}
*/

=== test.tsx_App_component_1_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX");
export const App_component_1_XXXXXXXXXXXX = () => {
  const C2 = _captures[0],
    C3 = _captures[1],
    C4 = _captures[2],
    C5 = _captures[3],
    C6 = _captures[4],
    C7 = _captures[5],
    C8 = _captures[6],
    I2 = _captures[7],
    I3 = _captures[8],
    I4 = _captures[9],
    I5 = _captures[10],
    I6 = _captures[11],
    I7 = _captures[12],
    I8 = _captures[13],
    count = _captures[14],
    state = _captures[15];
  return /* @__PURE__ */ _jsxSorted(
    "div",
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_div_q_e_click_XXXXXXXXXXXX", [
        count,
        state,
      ]),
    },
    null,
    [I2, I3, I4, I5, I6, I7, I8, C2, C3, C4, C5, C6, C7, C8, v1, v2, v3],
    0,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "C2",
    "C3",
    "C4",
    "C5",
    "C6",
    "C7",
    "C8",
    "I2",
    "I3",
    "I4",
    "I5",
    "I6",
    "I7",
    "I8",
    "count",
    "state"
  ]
}
*/

=== test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_div_q_e_click_XXXXXXXXXXXX = () => {
  const count = _captures[0],
    state = _captures[1];
  return (state.count += count + total);
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_1_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "count",
    "state"
  ]
}
*/

=== DIAGNOSTICS ===

[]
