crates/qwik-optimizer-oxc/tests/snapshots/example_getter_generation.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$(() => {
  const store = useStore({
    count: 0,
    stuff: 0,
    nested: {
      count: 0,
    },
  });
  const signal = useSignal(0);
  return (
    <Cmp
      prop={"true" + 1 ? "true" : ""}
      count={store.count}
      nested={store.nested.count}
      signal={signal}
      store={store.stuff + 12}
      value={signal.formData?.get("username")}
    ></Cmp>
  );
});

export const Cmp = component$((props) => {
  return (
    <>
      <p data-value={props.count}>{props.nested.count}</p>
      <p>
        Value {props.count}
        <span></span>
      </p>
    </>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Cmp_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);
export const Cmp = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Cmp_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { Cmp } from "./test";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const _hf0 = (p0) => p0.nested.count;
const _hf0_str = "p0.nested.count";
const _hf1 = (p0) => p0.stuff + 12;
const _hf1_str = "p0.stuff+12";
const _hf2 = (p0) => p0.formData?.get("username");
const _hf2_str = 'p0.formData?.get("username")';
export const App_component_XXXXXXXXXXXX = () => {
  const store = useStore({
    count: 0,
    stuff: 0,
    nested: {
      count: 0,
    },
  });
  const signal = useSignal(0);
  return /* @__PURE__ */ _jsxSorted(
    Cmp,
    null,
    {
      prop: "true",
      count: _wrapProp(store, "count"),
      nested: _fnSignal(_hf0, [store], _hf0_str),
      signal: signal,
      store: _fnSignal(_hf1, [store], _hf1_str),
      value: _fnSignal(_hf2, [signal], _hf2_str),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Cmp_component_XXXXXXXXXXXX.js === (ENTRY)
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
const _hf0 = (p0) => p0.nested.count;
const _hf0_str = "p0.nested.count";
export const Cmp_component_XXXXXXXXXXXX = (props) => {
  return /* @__PURE__ */ _jsxSorted(
    _Fragment,
    null,
    null,
    [
      /* @__PURE__ */ _jsxSorted(
        "p",
        {
          "data-value": _wrapProp(props, "count"),
        },
        null,
        _fnSignal(_hf0, [props], _hf0_str),
        1,
        null,
      ),
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        null,
        [
          "Value ",
          _wrapProp(props, "count"),
          /* @__PURE__ */ _jsxSorted("span", null, null, null, 3, null),
        ],
        1,
        null,
      ),
    ],
    1,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Cmp_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "paramNames": [
    "props"
  ]
}
*/

=== DIAGNOSTICS ===

[]
